More spacing issues service page and tabbed paragraph focus update (#175)
* add back spacing below intro on service pages, and tweaks to featured case study

* Ensure focus styles don't add shadow when link styles don't

--- a/tbx/static_src/sass/components/_tabs.scss
+++ b/tbx/static_src/sass/components/_tabs.scss
@@ -29,7 +29,6 @@
         margin-bottom: $spacer-small;
 
         &:focus {
-            @include focus-style();
             outline: $focus-width solid var(--color--focus-ring-muted);
         }
 
